--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html>
 	<body>
 		fuck you lol
+		<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.sketchfab.com%2Fmodels%2F18107ffe0e974b00ab295f829f17ee06%2Fthumbnails%2Fa7d247e7e7224467969f6ebd7b07d10e%2Ffbeef65d8c34420cbb07af001c08992b.jpeg&f=1&nofb=1">
 	</body>
 </html>
